--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,18 @@
 :root {
   --primary-color: #757575;
+  --primary-color-50: rgba(117, 117, 117, 0.5);
   --secondary-color: #212121;
   --accent-color: #2196F3;
-  --accent-color-90: rgba(33, 150, 243, 0.9);
+  --accent-color-90: #2196f3e6;
   --white-color: #ffffff;
   --logo-color: #000000;
   --contact-link-color: rgba(255, 255, 255, 0.6);
+  --sign-up-border-color: rgba(255, 255, 255, 0.3);
   --hero-footer-bg-color: #2F303A;
   --main-body-bg-color: #ffffff;
   --secondary-body-bg-color: #F5F4FA;
   --backlog-bg-color: rgba(0, 0, 0, 0.2);
+  --input-border-color: rgba(33, 33, 33, 0.2);
   --border-color: #ECECEC;
   --social-link-color: #AFB1B8;
   --footer-link-color: #44454E;
@@ -182,7 +185,7 @@ a.logo > span {
   height: 16px;
 }
 
-/* Hero */
+/* === Hero === */
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
@@ -218,7 +221,8 @@ a.logo > span {
 }
 
 .hero .oder-button,
-.sign-up-form .send-button {
+.sign-up-form .send-button,
+.form-button {
   display: inline-block;
 
   padding-top: 10px;
@@ -601,7 +605,7 @@ a.logo > span {
   padding-left: 16px;
 
   background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid var(--sign-up-border-color);
   border-radius: 4px;
   color: var(--white-color);
 }
@@ -636,8 +640,8 @@ a.logo > span {
   top: 50%;
   left: 50%;
   width: 528px;
-  height: 581px;
-  padding: 40px;
+  height: auto;
+  padding: 32px 40px 48px 40px;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   
@@ -675,6 +679,91 @@ a.logo > span {
   visibility: none;
   opacity: 0;
   pointer-events: none;
+}
+
+/* === modal form === */
+.form-title {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-color);
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-field input {
+  height: 40px;
+
+  border: 1px solid var(--input-border-color);
+  border-radius: 4px;
+}
+
+.form-field label {
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+}
+
+.form-field.comment {
+  margin-bottom: 20px;
+}
+
+.form-field.check {
+  margin-bottom: 30px;
+  flex-direction: row;
+  align-items: center;
+}
+
+textarea {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+
+  border: 1px solid var(--input-border-color);
+  border-radius: 4px; 
+}
+
+textarea::placeholder {
+  color: var(--primary-color-50);
+}
+
+.form-field input[type='checkbox'] {
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+
+  border-color: var(--secondary-color);
+}
+
+.form-field.check label {
+  margin-bottom: 0;
+
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.form-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 56px;
+}
+
+.form-input {
+  /* background-image: url(../images/icons.svg#icon-person-black); */
 }
 
 /* _________________ */
