--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,8 @@ a.logo > span {
 .social-list .link:focus {
   background-color: var(--accent-color);
   color: var(--white-color);
+
+  animation: splash var(--duration) linear;
 }
 
 .social-icon {
@@ -801,7 +803,8 @@ textarea::placeholder {
   border-radius: 2px;
   border: 2px solid var(--secondary-color);
 
-  transition: background var(--duration) var(--timing-function);
+  transform: scale(1);
+  transition: background-color var(--duration) var(--timing-function);
 }
 
 .input-check:checked + .checkbox {
@@ -810,6 +813,23 @@ textarea::placeholder {
   border: 2px solid var(--accent-color);
   background-image: url(../images/icon-check.svg);
   background-size: contain;
+
+  animation: splash var(--duration) linear;
+}
+
+/* === animation === */
+@keyframes splash {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
 
 /* _________________ */
