--- a/css/styles.css
+++ b/css/styles.css
@@ -672,6 +672,7 @@ a.logo > span {
   padding: 0;
   margin: 0;
   
+  outline: none;
   border: 1px solid var(--close-button-border-color);
   border-radius: 50%;
   background-color: transparent;
@@ -725,6 +726,7 @@ a.logo > span {
   color: var(--input-color);
   border: 1px solid var(--input-border-color);
   border-radius: 4px;
+  outline: none;
 
   transition: border-color var(--duration) var(--timing-function);
 }
@@ -764,6 +766,7 @@ a.logo > span {
 
   border: 1px solid var(--input-border-color);
   border-radius: 4px; 
+  outline: none;
 
   transition: border-color var(--duration) var(--timing-function);
 }
