--- a/css/styles.css
+++ b/css/styles.css
@@ -370,7 +370,6 @@ a.logo > span {
 }
 
 .team-list > .team-list-item {
-  padding-bottom: 30px;
   flex-basis: calc((100% - 120px) / 4);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -380,8 +379,11 @@ a.logo > span {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.team-list-item > .names {
-  margin-top: 30px;
+.content-wrapper {
+  padding: 30px 32px;
+}
+
+.content-wrapper > .names {
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -390,7 +392,7 @@ a.logo > span {
   letter-spacing: 0.03em;
 }
 
-.team-list-item > .names-text {
+.content-wrapper > .names-text {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -400,9 +402,6 @@ a.logo > span {
 .social-list {
   display: flex;
   margin-top: 16px;
-  padding-left: 32px;
-  padding-right: 32px;
-
   background-color: transparent;
 }
 
